# Records

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  todo.md
docs/: gmail-smtp.md  proton-mail-smtp.md
src/records/: __init__.py  __main__.py  app.py  auth.py  db.py  integrations.py  main.py  models.py  repo.py
src/records/static/: site.webmanifest
src/records/static/css/: records.css
src/records/static/js/: records.js
src/records/templates/: base.html  categories.html  category_detail.html  category_form.html  entry_detail.html  entry_form.html  forgot_password.html  home.html  login.html  reset_password.html  search.html  stats.html
src/records/templates/partials/: category_list.html  entry_list.html  lookup_results.html  search_picker.html  search_results.html
tmp/: 99-1433  99-1433-prompt
