[project]
name = "records"
version = "0.1.0"
description = "A small local cataloging app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.0.0",
    "sqlmodel>=0.0.22",
]

[project.scripts]
records = "records.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint] =
ignore = ["F821"]
