[project]
name = "records"
version = "0.1.0"
description = "A small local cataloging app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
records = "records.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F821"]
